--- a/index.html
+++ b/index.html
@@ -98,6 +98,21 @@ December 1, 2021&nbsp;·&nbsp;2 min&nbsp;·&nbsp;Shariq Jamil
 <article class=post-entry>
 <header class=entry-header>
 <h2>
+Solution for Advent of Code 2021 - Day 1
+</h2>
+</header>
+<section class=entry-content>
+<p>To count the number of increases in depth, this function iterates over the given input and checks to see if the previous number was smaller than the current one. If so, the counter gets incremented. At the end, the value of the counter is printed which refers to the total number of times that the depth measurement increased.
+def day1(): input_file = open("day1/day1-input") lines = input_file.readlines() counter = 0 for index, line in enumerate(lines): if index !...</p>
+</section>
+<footer class=entry-footer>
+December 1, 2021&nbsp;·&nbsp;1 min&nbsp;·&nbsp;Shariq Jamil
+</footer>
+<a class=entry-link aria-label="post link to Solution for Advent of Code 2021 - Day 1" href=https://shariq1989.github.io/posts/aoc_2021_d1/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
+<h2>
 Automated image optimization for publishing on a blog
 </h2>
 </header>
@@ -146,21 +161,6 @@ American Tobacco Trail
 October 6, 2021&nbsp;·&nbsp;1 min&nbsp;·&nbsp;Shariq Jamil
 </footer>
 <a class=entry-link aria-label="post link to Biking adventures through NC and beyond" href=https://shariq1989.github.io/posts/biking/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>
-GitHub 'repository not found' error when using an access token
-</h2>
-</header>
-<section class=entry-content>
-<p>At my work we use Personal Access Tokens (PATs) to authenticate to a GitHub repository (as opposed to using a password). I was having trouble cloning the repository and seeing the following error
-After browsing Stack Overflow posts, I realized that I didn’t set the right “scopes” or permissions for my token. I generated a new token but this time I made sure to set all the scopes under “repo”....</p>
-</section>
-<footer class=entry-footer>
-October 4, 2021&nbsp;·&nbsp;1 min&nbsp;·&nbsp;Shariq Jamil
-</footer>
-<a class=entry-link aria-label="post link to GitHub 'repository not found' error when using an access token" href=https://shariq1989.github.io/posts/github_not_found/></a>
 </article>
 <footer class=page-footer>
 <nav class=pagination>
